# SonicPACT

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  gradle.properties  import-summary.txt  settings.gradle
SonicPACT-app/: CMakeLists.txt  build.gradle
SonicPACT-app/src/androidTest/java/com/MIT/sonicPACT/: ApplicationTest.java
SonicPACT-app/src/main/: AndroidManifest.xml
SonicPACT-app/src/main/cpp/: AmpDetector.cpp  AmpDetector.h  AudioGenerator.cpp  AudioGenerator.h  AudioListener.cpp  AudioListener.h  AudoGenerator.cpp  AudoGenerator.h  BPSKSignalGenerator.cpp  BPSKSignalGenerator.h  Buffer.h  CMakeLists.txt  IncrementalLPF.cpp  IncrementalLPF.h  Logging.h  MatchedFilterDetector.cpp  MatchedFilterDetector.h  RandomNoise.cpp  RandomNoise.h  Timing.h  native-lib.cpp
SonicPACT-app/src/main/java/com/MIT/sonicPACT/: AudioDataReceivedListener.java  BluetoothHandler.java  BroadcastThread.java  Constants.java  FollowerThread.java  LeaderThread.java  ListenThread.java  MainActivity.java  NativeBridge.java  Utils.java
SonicPACT-app/src/main/res/layout/: activity_main.xml  content_main.xml
SonicPACT-app/src/main/res/menu/: menu_main.xml
SonicPACT-app/src/main/res/values/: styles.xml
SonicPACT-app/src/test/java/com/MIT/sonicPACT/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCV/: build.gradle
waveform/: Test.cpp  Test.h
waveform/src/androidTest/java/com/MIT/waveform/: ApplicationTest.java
waveform/src/main/: AndroidManifest.xml
waveform/src/main/java/com/MIT/waveform/: WaveformView.java
waveform/src/main/java/com/MIT/waveform/utils/: AudioUtils.java  SamplingUtils.java  TextUtils.java
waveform/src/test/java/com/MIT/waveform/: ExampleUnitTest.java
